--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "qdrant-client (>=1.7.0,<2.0.0)",
     "python-dotenv (>=1.0.0,<2.0.0)",
     "pydantic (>=2.12.4,<3.0.0)",
-    "pydantic-settings (>=2.0.0,<3.0.0)"
+    "pydantic-settings (>=2.0.0,<3.0.0)",
+    "asyncpg (>=0.29.0,<1.0.0)"
 ]
 
 [build-system]
